Update and rename app-engine-error-percent-poliocy.json to app-engine-error-percent-policy.json
# Description
# Create an alerting policy which divides the number of 500 errors by the total number of responses, then triggers when the 500 errors exceed 1 percent.

--- a/app-engine-error-percent-policy.json
+++ b/app-engine-error-percent-policy.json
@@ -1,3 +1,6 @@
+# Description
+# Create an alerting policy which divides the number of 500 errors by the total number of responses, then triggers when the 500 errors exceed 1 percent. 
+
 {
     "displayName": "HTTP error count exceeds 1 percent for App Engine apps",
     "combiner": "OR",
